kubernetes-for-beginners/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeting-api
spec:
  type: ClusterIP
  selector:
    app: greeting-api
  ports:
    - port: 80
      targetPort: 8080
